<!--
  ~ Copyright (C) Habib Rehman (git.io/HR) 2018
  -->

<resources>
    <!--App globals-->
    <string name="app_name">Picturesque</string>
    <string name="app_support_email">support@sahr.co</string>
    <string name="app_web_link">https://sahr.co/picturesque</string>
    <string name="app_legal_link">https://sahr.co/terms</string>
    <string name="app_faq_link">https://sahr.co/support</string>
    <string name="app_share_link">https://sahr.co/picturesque</string>
    <string name="app_sharel_link">http://play.google.com/store/apps/details?id=%1$s</string>
    <string name="app_market_link">market://details?id=%1$s</string>
    <string name="app_share_subject">Check out Picturesque</string>
    <string name="app_share_data">Check out Picturesque! The Best Free HD 4K Wallpaper App @ %1$s</string>

    <!--Permissions-->
    <string name="message_permission_storage">To save and set wallpapers, the storage permission is required</string>
    <string name="message_intent_unresolved">Could not find an app that can perform the action</string>
    <string name="message_external_media_unavailable">External storage is unavailable. Please try again later.</string>

    <!--Contact info-->
    <string name="feedback_email">support@sahr.co</string>
    <string name="feedback_email_subject">Feedback</string>

    <!--Shortcut actions URIs-->
    <string name="action_go_home">co.sahr.android.picturesque.go.home</string>
    <string name="action_go_premium">co.sahr.android.picturesque.go.premium</string>
    <string name="action_go_tags">co.sahr.android.picturesque.go.tags</string>
    <string name="action_go_liked">co.sahr.android.picturesque.go.liked</string>
    <string name="shortcut_go_pro">Go Pro</string>

    <!--Activity titles-->
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_wall">WallActivity</string>
    <string name="title_activity_tag">TagActivity</string>

    <!--Tab titles-->
    <string name="title_tab_home">Home</string>
    <string name="title_tab_premium">Premium</string>
    <string name="title_tab_tags">Categories</string>
    <string name="title_tab_likes">Likes</string>
    <!--Fallback-->
    <string name="message_load_error">Could not load the goodies</string>
    <string name="action_button_retry_load">RETRY</string>
    <string name="description_none_liked">You have no likes yet.\nSimply tap ❤ to like ;)</string>

    <!--Menu actions-->
    <string name="action_search">Search</string>
    <string name="action_menu">Menu</string>
    <string name="action_settings">Settings</string>
    <string name="action_sort">Sort</string>
    <string name="action_share">Share</string>
    <string name="action_report">Report</string>


    <!--WallActivity-->
    <string name="message_wall_save_unsuccessful">Failed to save the wallpaper. Please try again.</string>
    <string name="message_wall_save_successful">Wallpaper successfully saved to gallery</string>
    <string name="action_button_sys_settings">SETTINGS</string>
    <string name="message_wall_set_unavailable">Setting the wallpaper is not allowed or not supported on your device</string>
    <string name="message_wall_set_unsuccessful">Failed to set wallpaper. Try again :)</string>
    <string name="message_wall_set_successful">Wallpaper successfully set</string>
    <string name="action_button_set_wall">SET WALLPAPER</string>
    <string name="title_dialog_set_wall">Set wallpaper</string>
    <string name="message_dialog_set_wall">Setting wallpaper...</string>
    <string name="message_wall_load_fail">Failed to load wallpaper. No connectivity. Tap :( to retry.</string>
    <string name="description_copyright">© %1$s</string>
    <string name="subject_wall_report">Report a Wallpaper</string>
    <string name="title_wall_report">Send an email on...</string>

    <!--Unlock wall dialog-->
    <string name="title_dialog_unlock_wall">Not so fast</string>
    <string name="description_dialog_unlock_wall">You need to unlock this premium wallpaper to access it. Unlock options are\n</string>
    <string name="heading_dialog_unlock_wall_option_pro">Go Pro</string>
    <string name="item_dialog_unlock_wall_pro_feature1">Ad-free experience</string>
    <string name="item_dialog_unlock_wall_pro_feature2">Unlimited Premium wallpapers</string>
    <string name="item_dialog_unlock_wall_pro_feature3">New backgrounds daily</string>
    <string name="heading_dialog_unlock_wall_or">OR</string>
    <string name="heading_dialog_unlock_wall_option_free">Watch a Video</string>
    <string name="item_dialog_unlock_wall_free_feature1">Get this premium wallpaper for FREE</string>
    <string name="item_dialog_unlock_wall_free_feature2">No Premium features</string>
    <string name="action_button_dialog_unlock_wall_positive">GO PRO</string>
    <string name="action_button_dialog_unlock_wall_negative">WATCH VIDEO</string>

    <!-- Preferences -->

    <string name="title_pref_notifications">Notifications</string>
    <!-- Preferences/Notifications -->
    <string name="title_pref_wallofday">Wall of the Day</string>
    <string name="description_pref_wallofday">Get notified about the wallpaper of the day.</string>
    <!-- Preferences/General -->
    <string name="title_pref_general">General</string>
    <string name="title_pref_clear_cache">Clear Cache</string>
    <string name="description_pref_clear_cache">Clear locally cached data. Currently %1$s.</string>
    <string name="message_pref_cache_cleared">Cache cleared successfully</string>
    <string name="message_pref_data_cleared">App Data cleared successfully</string>
    <string name="title_pref_set_save_dir">Set Save Directory</string>
    <string name="description_pref_set_save_dir">Currently %1$s</string>
    <string name="title_pref_faq">FAQ</string>
    <string name="description_pref_faq">Have a question?  Check out our FAQ.</string>
    <string name="title_pref_share">Spread the word!</string>
    <string name="description_pref_share">Show some ❤. Share it with your friends and the world.</string>
    <string name="title_dialog_share">Spread the word on...</string>
    <!-- Preferences/Picturesque (about) -->
    <string name="title_pref_version">Version</string>
    <string name="title_pref_send_feedback">Send Feedback</string>
    <string name="description_pref_send_feedback">Email us about questions, bugs and feedback.</string>
    <string name="uri_email_pref_feedback">mailto:support@sahr.co?subject=Feedback</string>
    <string name="title_pref_legal">Legal</string>
    <string name="description_pref_legal">The boring stuff.</string>

    <!-- Preference keys -->
    <string name="pref_notifications_key" translatable="false">pref_notifications</string>
    <string name="pref_wallofday_key" translatable="false">pref_wallofday</string>
    <string name="pref_general_key_key" translatable="false">pref_general_key</string>
    <string name="pref_clear_cache_key" translatable="false">pref_clear_cache</string>
    <string name="pref_save_dir_key" translatable="false">pref_save_dir</string>
    <string name="pref_app_faq_key" translatable="false">pref_app_faq</string>
    <string name="pref_app_share_key" translatable="false">pref_app_share</string>
    <string name="pref_about_key" translatable="false">pref_about</string>
    <string name="pref_version_key" translatable="false">pref_version</string>
    <string name="pref_send_feedback_key" translatable="false">pref_send_feedback</string>
    <string name="pref_credits_key" translatable="false">pref_credits</string>
    <string name="pref_clear_cache_reset_size" translatable="false">0 B</string>
    <string name="prm" translatable="false">PRM</string>

    <!--Sort dialog-->
    <string name="title_dialog_sort_by">Sort by</string>
    <!--Swipe to refresh-->
    <string name="message_refresh_uptodate">You have the latest wallpapers :)</string>

    <!--Search-->
    <string name="title_search_hint">Search Picturesque</string>
    <string name="message_search_not_found">No walls were found</string>

    <!--Misc-->
    <string name="message_loading">Loading...</string>
    <string name="message_loading_more">Loading more...</string>
    <string name="message_error_inappbilling">Can not connect to Google Play Services. Try again later.</string>
</resources>
